# pr-agent

./: LICENSE  Makefile  README.md  app.py  claude_beta.py  events_git.json  logger_config.json  project_dirs.json  pyproject.toml  requirements.txt  test_server.py
agent/: builder_graph.py  manual_test.md  mcp_server.py  test_server.py  webhook_server.py
code_guidelines/: coding-standards.md  pr-guidelines.md
github_actions/: manual_test.md
prompts/: analyze_result.md  ci_failure.json  ci_success.json  generate_report.md  generate_summary.md  system_prompt.txt  troubleshoot.md
static/: ui.css
templates/: bug.md  documentation.md  feature.md  performance.md  refactor.md  security.md  test.md
