[project]
name = "pr-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx~=0.28.1",
    "langchain-core~=0.3.66",
    "langchain-google-genai~=2.1.5",
    "langchain-ollama~=0.3.3",
    "langchain-openai~=0.3.26",
    "langgraph~=0.5.0",
    "python-dotenv~=1.1.1",
    "requests~=2.32.4",
]
