[project]
name = "pr-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles~=24.1.0",
    "aiohttp~=3.12.13",
    "fastapi~=0.115.14",
    "httpx~=0.28.1",
    "langchain~=0.3.26",
    "langchain-core~=0.3.66",
    "langchain-google-genai~=2.1.5",
    "langchain-ollama~=0.3.3",
    "langchain-openai~=0.3.26",
    "langgraph~=0.5.0",
    "mcp~=1.9.4",
    "pytest~=8.4.1",
    "python-dotenv~=1.1.1",
    "requests~=2.32.4",
]
