[project]
name = "pr-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles~=24.1.0",
    "aiohttp~=3.12.13",
    "fastapi~=0.115.14",
    "gradio~=5.35.0",
    "httpx~=0.28.1",
    "langchain~=0.3.26",
    "langchain-core~=0.3.66",
    "langchain-google-genai~=2.1.5",
    "langchain-ollama~=0.3.3",
    "langchain-openai~=0.3.26",
    "langgraph~=0.5.0",
    "mcp~=1.10.1",
    "notebook>=7.4.4",
    "pydantic~=2.11.7",
    "pytest~=8.4.1",
    "python-dotenv~=1.1.1",
    "requests~=2.32.4",
    "typing-extensions~=4.14.0",
    "uvicorn~=0.34.3",
]
